--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <div class="container">
     <h2>Game</h2>
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo" onclick="myFunction()">
+      <div class="col-3 col-md-3 tile square box teal" id="demo">
         <div class="d-flex justify-content-center padding1">
-          <p id='res1' onclick="myFunction()"> click </p>
+          <p id='res1' > click </p>
         </div>
       </div>
       <div class="col-3 col-md-3 tile square box teal">
@@ -46,9 +46,9 @@
     </div>
 
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo4" onclick="myFunction()">
+      <div class="col-3 col-md-3 tile square box teal" id="demo4"  > <!--  onclick="myFunction()"> -->
         <div class="d-flex justify-content-center padding1">
-          <p id='res4' onclick="myFunction()"> click </p>
+          <p id='res4'> click </p>
         </div>
       </div>
       <div class="col-3 col-md-3 tile square box teal">
@@ -65,9 +65,10 @@
     </div>
 
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo7" onclick="myFunction()">
+      <div class="col-3 col-md-3 tile square box teal" id="demo7" >
+        <!-- onclick="test()"> -->
         <div class="d-flex justify-content-center padding1">
-          <p id='res7' onclick="myFunction()"> click </p>
+          <p id='res7'> click </p>
         </div>
       </div>
 
@@ -85,13 +86,20 @@
     </div>
   </div>
 
-  <script>
-    document.getElementById("demo").addEventListener("click", myFunction);
+  <!-- <script  type="module" src="assets/scripts/index.js"
 
-     function myFunction() {
-         document.getElementById("demo").innerHTML = "YOU CLICKED ME!";
-      }
-  </script>
+    // document.getElementById("demo4").addEventListener("click", clicked());
+
+     // function myFunction() {
+     //     document.getElementById("demo").innerHTML = "YOU CLICKED ME!";
+     //  }
+
+    //$('#demo').on('click', test() )
+    //
+    // function clicked() {
+    //      document.getElementById("demo4").innerHTML = "YOU CLICKED ME!";
+    //   } tictactoe_new/assets/scripts/index.js"
+   </script>  > -->
 
 </body>
 
