--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
     <input name="credentials[password_confirmation]" type="password" value="an example password">
   </form>
 
-  <div class="col-xs-12" style="height:50px;"> </div>
+  <!-- <div class="col-xs-12" style="height:50px;"> </div> -->
   <div class="container">
     <h2>Game</h2>
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo">
+      <div class="col-3 col-md-3 tile square box teal" id="click1">
         <div class="d-flex justify-content-center padding1">
-          <p id='res1' > click </p>
+          <div id='res1' > </div>
         </div>
       </div>
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click2" >
         <div class="d-flex justify-content-center padding1">
           <div id='res2'> </div>
         </div>
       </div>
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click3">
         <div class="d-flex justify-content-center padding1">
           <div id='res3'> </div>
         </div>
@@ -46,17 +46,17 @@
     </div>
 
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo4"  > <!--  onclick="myFunction()"> -->
+      <div class="col-3 col-md-3 tile square box teal" id="click4"  > <!--  onclick="myFunction()"> -->
         <div class="d-flex justify-content-center padding1">
-          <p id='res4'> click </p>
+          <p id='res4'> </p>
         </div>
       </div>
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click5">
         <div class="d-flex justify-content-center padding1">
           <div id='res5'> </div>
         </div>
       </div>
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click6">
         <div class="d-flex justify-content-center padding1">
           <div id='res6'> </div>
         </div>
@@ -65,19 +65,19 @@
     </div>
 
     <div class="row">
-      <div class="col-3 col-md-3 tile square box teal" id="demo7" >
+      <div class="col-3 col-md-3 tile square box teal" id="click7" >
         <!-- onclick="test()"> -->
         <div class="d-flex justify-content-center padding1">
-          <p id='res7'> click </p>
+          <p id='res7'> </p>
         </div>
       </div>
 
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click8">
         <div class="d-flex justify-content-center padding1">
           <div id='res8'> </div>
         </div>
       </div>
-      <div class="col-3 col-md-3 tile square box teal">
+      <div class="col-3 col-md-3 tile square box teal" id="click9">
         <div class="d-flex justify-content-center padding1">
           <div id='res9'> </div>
         </div>
@@ -86,6 +86,9 @@
     </div>
   </div>
 
+
+
+  <!-- <div id='test' > click </div> -->
   <!-- <script  type="module" src="assets/scripts/index.js"
 
     // document.getElementById("demo4").addEventListener("click", clicked());
